--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "es-errors": "^1.3.0",
     "husky": "^9.0.11",
     "install": "^0.13.0",
+    "lint-staged": "^15.2.10",
     "oxlint": "^1.2.0",
     "prettier": "^3.4.2",
     "sherif": "^1.2.0",
@@ -37,5 +38,17 @@
     "patchedDependencies": {
       "xcode@3.0.1": "patches/xcode@3.0.1.patch"
     }
+  }
+  ,
+  "lint-staged": {
+    "ignores": [
+      "docs/build/**"
+    ],
+    "*.{ts,tsx,js,jsx,cts,mts}": [
+      "oxlint --quiet"
+    ],
+    "*.{ts,tsx,js,jsx,cts,mts,json,md,css,scss,html,yml,yaml}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
