--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -29,7 +29,7 @@
     "format:fix": "prettier . --write --ignore-path ../../.prettierignore",
     "lint": "oxlint .",
     "lint:fix": "oxlint . --fix",
-    "test": "vitest"
+    "test": "vitest run --bail=1"
   },
   "main": "index.ts",
   "prettier": "@karakeep/prettier-config"
