--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -10,7 +10,7 @@
     "format:fix": "prettier . --write --ignore-path ../../.prettierignore",
     "lint": "oxlint .",
     "lint:fix": "oxlint . --fix",
-    "test": "vitest"
+    "test": "vitest run --bail=1"
   },
   "dependencies": {
     "@karakeep/db": "workspace:*",
