--- a/tooling/github/setup/action.yml
+++ b/tooling/github/setup/action.yml
@@ -18,6 +18,13 @@ runs:
       run: npm install -g corepack@0.31.0 && corepack enable
 
     - shell: bash
-      run: pnpm install
+      run: pnpm fetch
       env:
+        PNPM_STORE_DIR: .pnpm-store
+        PUPPETEER_SKIP_DOWNLOAD: "true"
+
+    - shell: bash
+      run: pnpm install --frozen-lockfile
+      env:
+        PNPM_STORE_DIR: .pnpm-store
         PUPPETEER_SKIP_DOWNLOAD: "true"
